# TestProject

./: CMakeLists.txt  README.md  specs.md
TEST_PROJECT/: CMakeLists.txt
TEST_PROJECT/src/: asyncbuffer.cpp  asyncbuffer.h  buffer.cpp  main.cpp  main_test.cpp  mediantracker.h  processor.cpp  processor.h
TEST_PROJECT/test_files/: level.csv  parse_toml2.toml  result.csv  trade.csv
src/: asyncbuffer.h  buffer.h  filescompare.h  logger.h  main.cpp  utility.cpp  utility.h
test_files/: output.csv  parse_toml1.toml
